@@ -178,6 +178,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -feature: introduce |graph_start| and |graph_end| for use with COMMENT/GPRINT or the like
 
 0.8.7h
+-bug#0000401: Check for duplicate Data Source Item Names in Data Templates
 -bug#0001403: 'reapply suggested names' doesn't work correctly for graphs and data sources
 -bug#0001504: no newline fix
 -bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
